TEIV API Uplift - ProblemDetails implementation
Issue-ID: SMO-196
